Fix about us gap between elements

--- a/new/CSS/style.css
+++ b/new/CSS/style.css
@@ -257,6 +257,19 @@ main{
 
 /* ABOUT-US */
 
+#about-us .container{
+    padding: 1.5rem 1.5rem 2.5rem 1.5rem;
+}
+
+#about-us .spacer>h2, .spacer>p{
+    padding-bottom: 1.5rem;
+}
+
+#about-us .spacer>h2{
+    color: var(--bg-lilla);
+    font-size: 2.5rem;
+}
+
 .about-user{
     background-image: url(../../assets/img/about.jpg);
 }
@@ -280,6 +293,7 @@ main{
 #about-us .user p{
     font-weight: bold;
     text-align: start;
+    padding: 1.5rem 0;
 }
 
 /* ABOUT-US END*/
